Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@mixin hover-bg($border-radius, $no-bg: false, $blue-bg: false) {
	@media screen and (width>=1265px) {
		&:hover {
			@if $no-bg {
				background-color: $theme-color;
			} @else if $blue-bg {
				background-color: lightblue;
				border-radius: $border-radius;
			} @else {
				background-color: lightgrey;
				border-radius: $border-radius;
			}
		}
	}
}

@mixin hover-btn-bg {
	&:hover {
		background-color: rgba(23, 124, 192);
	}
}

@mixin active-bg($border-radius) {
	&:active {
		background-color: lightgrey;
		border-radius: $border-radius;
	}
}

$theme-color: white;
$sub-theme-color: rgba(239, 243, 244, 0.5);

@font-face {
	font-family: "chirp";
	src: url("./assets/fonts/Chirp-Regular.80fda27a.woff2") format("woff2");
	font-weight: 400; //regular
}

@font-face {
	font-family: "chirp";
	src: url("./assets/fonts/Chirp-Medium.f8e2739a.woff2") format("woff");
	font-weight: 500; //medium;;
}

@font-face {
	font-family: "chirp";
	src: url("./assets/fonts/Chirp-Bold.ebb56aba.woff2") format("woff2");
	font-weight: 700; //bold
}

@font-face {
	font-family: "chirp";
	src: url("./assets/fonts/Chirp-Heavy.f44ae4ea.woff2") format("woff2");
	font-weight: 900; //heavy;;
}
@font-face {
	font-family: "chirp";
	src: url("./assets/fonts/Chirp-Light.3a18e64a.woff2") format("woff2");
	font-weight: 300; //light
}

:root {
	--header-height: 107px;
	--tweet-box-height: 188px;
	--main-border-style: 1px solid rgb(239, 243, 244);
}

::placeholder {
	color: #536471;
}

:focus {
	outline: 0;
}

section,
div,
p,
img,
ul,
ol,
li {
	margin: 0;
	padding: 0;
}

.alignment-boxes {
	flex: 1 1 50%;
	height: 100%;
	margin: 0;
	padding: 0;

	@media screen and (width>=500px) {
		display: none;
	}
}

.hidden500 {
	display: none !important;
	@media only screen and (width>=500px) and (height>=500px) {
		display: flex !important;
	}
}

.hidden750-h {
	display: none !important;
	@media only screen and (width>=500px) and (height>=750px) {
		display: flex !important;
	}
}

.hidden688 {
	display: none !important;
	@media only screen and (width>=688px) {
		display: flex !important;
	}
}

.hidden705 {
	display: none !important;
	@media only screen and (width>=705px) {
		display: flex !important;
	}
}

.hidden-More {
	display: none !important;
}

.overflow-x-v {
	overflow-x: visible;
}

.wrapper {
	display: flex;
	min-width: 100%;
	height: 100%;
	align-items: start;

	@media screen and (width>=500px) and (height >=500px) {
		flex-direction: column;
		min-height: max-content;
		max-height: max-content;
		height: max-content;
		width: min-content;
		overflow-y: visible;
		padding: 0;

		@media screen and (height>=855px) {
			min-height: 704.5px;
		}
	}

	@media screen and (width>=988px) {
		width: 100%;
	}
}

.wrappers {
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
}
.wrappers--flex {
	display: flex;
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
}
.wrappers--flex-column {
	display: flex;
	flex-direction: column;
}

.justify-stretch {
	justify-content: stretch;
}

.flex-b1 {
	flex-basis: 1;
}
.flex-b3 {
	flex-basis: 3;
}

.App {
	display: flex;
	flex-direction: column;
	height: 100vh;
	margin: 0;
	padding: 0;
	overflow-x: hidden;
	font-family: chirp;
	font-weight: light;
	background-color: $theme-color;

	@media only screen and (width>=500px) and (height>=500px) {
		flex-direction: row;
		overflow-y: scroll;
	}
}

.navigation {
	z-index: 3;
	position: sticky;
	order: 3;
	display: flex;
	bottom: 0;
	margin: 0;
	padding: 0;
	margin-top: auto;
	border-top: var(--main-border-style);
	height: 53.5px;
	min-height: 53.5px;
	max-height: 53.5px; //both heights required + purposefully diff from twitter actual height in order to avoid creating wrapper inside nav
	width: 100%;
	box-sizing: border-box;
	background-color: $theme-color;

	@media only screen and (width>=500px) and (height>=500px) {
		flex-direction: column;
		flex: 1 0 auto;
		height: max-content;
		max-height: 100vh;
		min-height: max-content;
		width: 68px;
		max-width: 68px;
		border-top: 0;
		margin: 0;
		padding: 0 4px;
		order: unset;
		overflow-y: hidden;
		justify-content: space-between;
		align-items: center;
		top: 0;
		overflow-x: hidden;
		overflow-y: scroll;

		@media screen and (height>=662px) {
			min-height: 100%;
		}
	}

	@media only screen and (width>=600px) {
		padding: 0;
		max-width: unset;
		width: 88px;
		max-width: 88px;
		border: none;
	}

	@media only screen and (width>=688px) {
		width: 88px;
		max-width: unset;
		flex: 1 0 auto;
		align-items: end;
		padding: 0 8px;
	}

	@media only screen and (width>=988px) {
		width: 68px;
		flex: 1 0 auto;
		align-items: end;
		overflow-y: hidden;
		padding: 0;
	}

	@media screen and (width>=1008px) {
		width: 88px;
		flex: 1 0 auto;
		overflow-y: hidden;
	}

	@media screen and (width>=1078px) {
		width: 88px;
		align-items: end;
	}
	@media screen and (width>=1265px) {
		width: 275px;
		align-items: end;
		padding: 0;
	}
}
/* ... */

